# shzx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  analyzer.py  constants.py  explaincmd.py  handlers.py  hook.py  install.py  pyproject.toml  shzx.py
tests/: test_analyzer.py  test_explaincmd.py  test_handlers.py  test_hook.py  test_install.py  test_safeshell.py
